# Q42---Rijksmuseum-recommender-system

./: .gitignore  README.md  docker-compose.yml
backend/: colors.csv  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 19b8bafda6df_add_actual_recommend_feature_to_.py  2ddedb7b27dc_create_paintings_model.py  30e614a8d334_add_feature_to_click_model.py  859318f19de9_extend_painting_model.py  9604f333caca_rename_field.py  a44059c05eaa_create_evaluation_model.py  a9bdbc24d693_create_user_refresh_model.py  b5dd3195f199_create_user_model.py  ba9d683d7b26_create_user_click_model.py  efb16c48568b_add_actual_image_to_evaluation.py  f482af7d03b2_add_features_to_painting.py  f4dc2d9fb6f2_add_evaluation_results.py
backend/app/: __init__.py  depenencies.py  enum.py  exceptions.py
backend/app/data/: similarity_matrix_color.csv  similarity_matrix_description.csv  similarity_matrix_style.csv  similarity_matrix_visual.csv
backend/app/models/: __init__.py  base.py  database.py  painting.py  user.py  userclick.py  userevaluation.py  userevalutionresults.py  userrefresh.py
backend/app/repository/: painting_repository.py  user_repository.py
backend/app/routers/: evaluation_router.py  painting_router.py  token_router.py  user_router.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/Components/: Header.js  Layout.js  Token.js
frontend/src/Pages/: Evaluation.js  Index.js  Login.js  Painting.js  Register.js
frontend/src/Styles/: evaluation.css  header.css  index.css  layout.css  login.css  painting.css
